<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BippoBippo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connecting">Connecting</string>
    <string name="please_wait">Please wait...</string>
    <string name="chart_summary">Chart summary</string>
    <string name="stop">Stop</string>
    <string name="first_aid">First aid</string>
    <string name="emergency_call">Emergency call</string>
    <string name="highest_temprature">Highest</string>
    <string name="average_temprature">Average</string>
    <string name="lowest_temprature">Lowest</string>
    <string name="heat_alarm">has a fever!</string>
    <string name="wet_alarm">is peeing!</string>
    <string name="bpm_alarm">Bpm Alarm</string>
    <string name="mic_alarm">is crying!</string>
    <string name="setting_title">User credentials</string>
    <string name="baby_name">Name :</string>
    <string name="baby_name_hint">Enter baby\'s name</string>
    <string name="phone_number">Number :</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="baby_birth">Birthday :</string>
    <string name="baby_birth_hint">baby\'s birthday</string>
    <string name="baby_temprature">Temprature : </string>
    <string name="baby_temp_hint">Default temprature</string>
    <string name="baby_wet_sensitivity">Wet sensitivity : </string>
    <string name="menu_chart">Show chart</string>
    <string name="menu_settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="emergency">Emergency call : </string>
    <string name="emergency_number">119</string>
    <string name="quiet">Quiet</string>
    <string name="loud">Loud</string>
    <string name="dry">Dry</string>
    <string name="wet">Wet</string>
    <string name="chart_period">Select chart period</string>
    <string name="chart_prompt">Select period</string>
    <string name="overview">Overview</string>
    <string name="notice">Notice</string>
    <string name="solution">Solution</string>
    <string name="solution_title">You can treat your baby\'s symptoms like following</string>
    <string name="notice_title">Please note the following information</string>
    <string name="alarm_paused_5_minutes">Alarm paused for 5 minutes</string>
    <string name="my_baby_summary">My Baby</string>
    <string name="other_baby_summary">Other Baby</string>

</resources>
