<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="4" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:text="@string/baby_name" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:ems="9"
            android:hint="@string/baby_name_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/number_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:ems="9"
            android:hint="@string/phone_number_hint"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:text="@string/baby_birth" />

        <EditText
            android:id="@+id/birth_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:ems="9"
            android:hint="@string/baby_birth_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_row="3"
            android:text="@string/baby_temprature" />

        <EditText
            android:id="@+id/temp_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="10dp"
            android:layout_row="3"
            android:ems="9"
            android:hint="@string/baby_temp_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:text="@string/baby_wet_sensitivity" />

        <SeekBar
            android:id="@+id/wet_seek"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:max="10"
            android:progress="5" />

        <TextView
            android:id="@+id/wet_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:text="0" />

    </GridLayout>
    
    <Button
        android:id="@+id/setting_confirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/GridLayout1"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"/>

</RelativeLayout>