<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/overview"
        android:textColor="#778899"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corners_white" >

        <TextView
            android:id="@+id/overview_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/overview"
            android:textColor="#707070"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/solution_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/solution"/>
        <Button
            android:id="@+id/notice_button"
            android:layout_width="100dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:text="@string/notice"/>
    </LinearLayout>

</LinearLayout>
